tests/baselines/reference/templateStringWithEmbeddedYieldKeywordES6.errors.txt
tests/cases/conformance/es6/templates/templateStringWithEmbeddedYieldKeywordES6.ts(1,1): error TS9001: 'generators' are not currently supported.


==== tests/cases/conformance/es6/templates/templateStringWithEmbeddedYieldKeywordES6.ts (1 errors) ====
    function* gen() {
    ~~~~~~~~
!!! error TS9001: 'generators' are not currently supported.
        // Once this is supported, yield *must* be parenthesized.
        var x = `abc${ yield 10 }def`;
    }
    